tests/ui/issues/issue-22886.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-22886.rs:13:6
   |
LL | impl<'a> Iterator for Newtype {
   |      ^^ unconstrained lifetime parameter
   |
   = note: consider using lifetime parameter `'a` in the impl on `Newtype` or otherwise constrain `'a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
